--- a/website/static/style.css
+++ b/website/static/style.css
@@ -2,6 +2,7 @@
       #particles-js{ 
             height: 900px; 
             background-color: #d4d4d4; 
+            width: cover;
       }
 
       .alert{
