--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,3 +1,5 @@
+{% extends "template.html" %} {% block title %}Home{% endblock %}{% block content %}
+  
 <!doctype html>
 <html>
 
@@ -17,53 +19,11 @@
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <!-- TailWindCSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            clifford: '#da373d',
-            indigo: "4B0082",
-            'cc1': "#F8F9FA",
-            'cc2': "#E9ECEF",
-            'cc3': "#DEE2E6",
-            'cc4': "#CED4DA",
-            'cc5': "#ADB5BD",
-            'cc6': "#6C757D",
-            'cc7': "#495057",
-            'cc8': "#343A40",
-            'cc9': "#212529",
-          }
-        }
-      }
-    }
-  </script>
 </head>
 <body>
   <script src="/path/to/flickity.pkgd.min.js"></script>
   <center>
-    <!-- background -->
-    <div class="bg-gradient-to-t from-cc4 to-cc5">
-
-      <!-- FLASHES -->
-      {% with messages = get_flashed_messages(with_categories = true)%}
-      {% if messages %}
-      {% for category, message in messages %} {% if category == 'error' %}
-      <div class="alert alert-danger alter-dismissable fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% else %}
-      <div class="alert alert-success alter-dismissable fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% endif %}{% endfor %}{% endif %}{% endwith %}
-
+    <div class="bg-cc6 bg-cover">
     <!-- Start of the Grid -->
     <div class="grid grid-rows-5 grid-cols-5 grid-flow-col h-screen grid-parent"> 
       <!-- main menu and title -->
@@ -117,7 +77,7 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
     <!-- About -->
-    <div id="particles-js"></div>
+    <div id="particles-js" class="border-8 rounded-xl pb-20"></div>
     <script>
       /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
         particlesJS.load('particles-js', 'static/particles.json', function() {
@@ -131,8 +91,6 @@
     </script>
     
     </center>
-
-
 </body>
-
 </html>
+{% endblock %}
