Added choice will make it into a functional route later

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -31,7 +31,7 @@
         <div class="row-start-2 row-end-5 col-start-2 col-end-5 rounded-3xl relative z-10">
           <div
             class="absolute top-4/4 left-1/2 transform 
-            -translate-x-1/2 -translate-y-1/2 bg-slate-400 
+            -translate-x-1/2 -translate-y-1/2 bg-gray-200 
             border-solid border-slate-300	border-2 shadow-2xl"
             style="
               width: 900px;
@@ -72,10 +72,8 @@
                   required
                 />
               </div>
-              <br />
-              <button type="submit" class="btn bg-slate-200 shadow-2xl text-white">
-                Login
-              </button>
+              <br>
+              <button type="submit" class="btn bg-slate-500 shadow-2xl text-white">Login</button>
               <br><br>
               <!-- link to sign up -->
               <a href="/signup" class ="font-bold" > Dont have an account? </a>
