--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "template.html" %} {% block title %}Home{% endblock %}{% block content %}
+{% extends "template.html" %} {% block title %}home{% endblock %}{% block content %}
   
 <!doctype html>
 <html>
@@ -23,20 +23,20 @@
 <body>
   <script src="/path/to/flickity.pkgd.min.js"></script>
   <center>
-    <div class="bg-cc6 bg-cover">
+    <div class="bg-zinc-800 bg-cover">
     <!-- Start of the Grid -->
     <div class="grid grid-rows-5 grid-cols-5 grid-flow-col h-screen grid-parent"> 
       <!-- main menu and title -->
       <div class="row-span-5 max-w-96">
         <div class="grid grid-cols-1 grid-rows-5 grid-child h-screen">
           <!-- title -->
-          <h1 class="row-span-1 my-auto text-4xl text-right pt-40 mr-24 font-bold">
-            COL;F
+          <h1 class="row-span-1 my-auto text-4xl text-right pt-40 mr-16 font-bold">
+            COAL;F
           </h1>
           {% if user.is_authenticated %}
           <!-- main menu -->
           <div class="row-span-4 font-medium text-2xl text-slate-500 my-auto text-left ps-14">
-            <a href="/game" class =" hover:underline">Learn</a>
+            <a href="/choice" class =" hover:underline">Learn</a>
             <br>
             <!-- patch notes -->
             <a href="/updates" class =" hover:underline">Update</a>
@@ -62,8 +62,8 @@
     <div class="row-span-3 col-start-2 col-span-4 pb-20">
       <!-- CAROUSEL FOR FLEXING COOL STUFF -->
        <!-- Flickity HTML init -->
-       <div class="border-solid border-slate-900 border-8 rounded-2xl shadow-2xl bg-green-300 mt-10 mr-10">
-        <div class="main-gallery js-flickity shadow-2xl" data-flickity='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false, "autoPlay": 5000 }'>
+       <div class="mt-10 mr-10">
+        <div class="main-gallery js-flickity" style="border-radius: 10px;" data-flickity='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false, "autoPlay": 5000 }'>
           <div class="gallery-cell" style="background-image: url(static/assets/img/1.jpg)"></div>
           <div class="gallery-cell" style="background-image: url(static/assets/img/2.jpg)"></div>
           <div class="gallery-cell" style="background-image: url(static/assets/img/3.jpg)"></div>
@@ -77,7 +77,7 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
     <!-- About -->
-    <div id="particles-js" class="border-8 rounded-xl pb-20"></div>
+    <div id="particles-js" class="border-0 rounded-xl pb-20"></div>
     <script>
       /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
         particlesJS.load('particles-js', 'static/particles.json', function() {
