--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -30,7 +30,7 @@
         <div class="row-start-2 row-end-5 col-start-2 col-end-5 rounded-3xl relative z-10">
           <div
             class="absolute top-4/4 left-1/2 transform 
-            -translate-x-1/2 -translate-y-1/2 bg-slate-400 
+            -translate-x-1/2 -translate-y-1/2 bg-gray-200 
             border-solid border-slate-300	border-2 shadow-2xl"
             style="
               width: 900px;
