--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -43,6 +43,7 @@
     }
   </style>
 <!-- background -->
+<div class="bg-zinc-900">
         <!-- FLASHES -->
         {% with messages = get_flashed_messages(with_categories = true)%}
         {% if messages %}
@@ -61,7 +62,7 @@
           </button>
         </div>
         {% endif %}{% endfor %}{% endif %}{% endwith %}
-        <div class="container bg-transparent">{% block content %}{% endblock %}</div>
+        <div class="container">{% block content %}{% endblock %}</div>
 </body>
 
 </html>
