Started work on CHOICE.HTML
I plan to work on integrating TailwindCSS properly

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -16,6 +16,11 @@
             z-index: 5;
       }
 
+      .lightBG{
+            margin-right: 6vw;
+            margin-left: 6vw;
+      }
+
       * { box-sizing: border-box; }
 
     body { font-family: sans-serif; }
