--- a/website/templates/choice.html
+++ b/website/templates/choice.html
@@ -1,26 +1,27 @@
 {% extends "template.html" %} {% block title %}choice{% endblock %}{% block content %}
 <!doctype html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- CSS for particle.js -->
-  <link rel="stylesheet" href="static/style.css">
-
-  <!-- CAROUSEL (Did not want to use bootstrap)-->
-  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-  <!-- TailWindCSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    <div class="bg-zinc-800 bg-cover">
+  <div class="lightBG">
+    <div class="bg-zinc-800 h-screen border-l-2 border-r-2 border-slate-300 shadow-xl shadow-slate-100">
+      <!-- 3 options grid -->
+      <div class="grid grid-rows-1 grid-cols-3 gap-8 h-screen grid-parent"> 
+      <!-- Digital Game (left most one) -->
+        <div class="col-span-1 bg-orange-500 ml-8 choices">
+        </div>
+      <!-- Classic Game (Centered most one) -->
+        <div class="col-span-1 bg-green-950	">
+        </div> 
+      <!-- Japanese Game (Right most one) -->
+        <div class="col-span-1 bg-cyan-600 mr-8">
+        </div>
+      </div>
     </div>
+
 </body>
 {% endblock %}
