--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,24 +6,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- CSS for particle.js -->
-  <link rel="stylesheet" href="static/style.css">
-
-  <!-- CAROUSEL (Did not want to use bootstrap)-->
-  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-  <!-- TailWindCSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+  <div class="lightBG">
   <script src="/path/to/flickity.pkgd.min.js"></script>
   <center>
-    <div class="bg-zinc-800 bg-cover">
+  <div class="bg-zinc-800 bg-cover">
     <!-- Start of the Grid -->
     <div class="grid grid-rows-5 grid-cols-5 grid-flow-col h-screen grid-parent"> 
       <!-- main menu and title -->
@@ -90,7 +78,8 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js">
     </script>
     
-    </center>
+  </div>
+  </center>
 </body>
 </html>
 {% endblock %}
