--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -10,8 +10,20 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- CSS for particle.js -->
+  <link rel="stylesheet" href="static/style.css">
+
+  <!-- CAROUSEL (Did not want to use bootstrap)-->
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
   <!-- TailWindCSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Animate.CSS -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
   <script>
     tailwind.config = {
       theme: {
