Added pretty animations
-- CHOICE --
~ added pretty animations to the game slection screen

-- HOME --
Changed carousel, added general css of a bordor and shadow.

-- To do --
~ add particle .js and blog

--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -10,7 +10,7 @@
       <!-- Start of login grid -->
       <div class="grid grid-rows-5 grid-cols-5 h-screen">
         <!-- login -->
-        <div class="row-start-2 row-end-5 col-start-2 col-end-5 rounded-3xl relative z-10">
+        <div class="row-span-5 col-start-2 col-end-5 rounded-3xl relative z-10">
           <div
             class="absolute top-4/4 left-1/2 transform 
             -translate-x-1/2 -translate-y-1/2 bg-gray-200 
@@ -25,11 +25,23 @@
           ></div>
             
           <center>
-          <form method="POST"  class="relative z-20">
-            <h1 class="text-4xl pb-2">Sign Up</h1>
+          <form method="POST"  class="relative z-20 mt-5">
+            <h1 class="text-4xl">Sign Up</h1>
             <!-- random line -->
             <div class="w-5/6 h-0.5 bg-cc8 mb-6"></div>
-        
+            
+            <div class="form-group max-w-xl">
+              <label for="username" class="text-lg">Username</label>
+              <input 
+                type="username" 
+                class="form-control shadow-2xl" 
+                id="username" 
+                name="username"
+                placeholder="Enter Username"
+                required
+              />
+            </div>
+
             <div class="form-group max-w-xl">
               <label for="email" class="text-lg">Email address</label>
               <input 
@@ -66,7 +78,7 @@
                 />
               </div>
         
-        <button type="submit" class="btn bg-cc6 shadow-2xl text-white"> Sign Up </button>
+        <button type="submit" class="btn bg-slate-500 shadow-2xl text-white"> Sign Up </button>
         <br><br>
         <a href="/login" class ="font-bold" > Fat Fingered? </a>
       </center>
