--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,14 +6,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" href="static/css/src/input.css">
 </head>
+
 <body>
-  <div class="lightBG">
   <script src="/path/to/flickity.pkgd.min.js"></script>
   <center>
-  <div class="bg-zinc-800 bg-cover">
+  <div class="bg-zinc-800 bg-cover lightBG">
     <!-- Start of the Grid -->
     <div class="grid grid-rows-5 grid-cols-5 grid-flow-col h-screen grid-parent"> 
       <!-- main menu and title -->
@@ -53,7 +51,9 @@
       <!-- CAROUSEL FOR FLEXING COOL STUFF -->
        <!-- Flickity HTML init -->
        <div class="mt-10 mr-10">
-        <div class="main-gallery js-flickity" style="border-radius: 10px;" data-flickity='{ "wrapAround": true, "prevNextButtons": false, "pageDots": false, "autoPlay": 5000 }'>
+        <div class="main-gallery js-flickity" style="border-radius: 10px;" data-flickity='{ "wrapAround": true, 
+        "prevNextButtons": false, "pageDots": false, "autoPlay": 5000, "cellSelector": ".gallery-cell"}'>
+        <div class="static-banner">Static banner 1</div>
           <div class="gallery-cell" style="background-image: url(static/assets/img/1.jpg)"></div>
           <div class="gallery-cell" style="background-image: url(static/assets/img/2.jpg)"></div>
           <div class="gallery-cell" style="background-image: url(static/assets/img/3.jpg)"></div>
@@ -80,8 +80,9 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js">
     </script>
     
-  </div>
   </center>
+  <canvas class="background">asdasd</canvas>
+  <script src="static/to/particles.min.js"></script>
 </body>
 </html>
 {% endblock %}
