--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -11,37 +11,20 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- main css file -->
-  <link rel="stylesheet" href="static/css/src/input.css">
+  <link rel="stylesheet" href="static/css/main.css">
+  <link rel="stylesheet" href="static/css/src/output.css">
 
   <!-- CAROUSEL (Did not want to use bootstrap)-->
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
+  <!--Tailwind--> 
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Animate.CSS -->
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            clifford: '#da373d',
-            indigo: "4B0082",
-            'cc1': "#F8F9FA",
-            'cc2': "#E9ECEF",
-            'cc3': "#DEE2E6",
-            'cc4': "#CED4DA",
-            'cc5': "#ADB5BD",
-            'cc6': "#6C757D",
-            'cc7': "#495057",
-            'cc8': "#343A40",
-            'cc9': "#212529",
-          }
-        }
-      }
-    }
-  </script>
 </head>
 <body>
   <style>
@@ -53,25 +36,27 @@
   </style>
 <!-- background -->
 <div class="bg-zinc-900">
-        <!-- FLASHES -->
-        {% with messages = get_flashed_messages(with_categories = true)%}
-        {% if messages %}
-        {% for category, message in messages %} {% if category == 'error' %}
-        <div class="alert alert-danger alter-dismissable fade show" role="alert">
-          {{ message }}
-          <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
-          </button>
+        <div class="container">
+          {% with messages = get_flashed_messages(with_categories = true)%}
+          {% if messages %}
+          {% for category, message in messages %} {% if category == 'error' %}
+          <div class="alert alert-danger alter-dismissable fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {% else %}
+          <div class="alert alert-success alter-dismissable fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {% endif %}{% endfor %}{% endif %}{% endwith %}
+          {% block content %}        
+          {% endblock %}
         </div>
-        {% else %}
-        <div class="alert alert-success alter-dismissable fade show" role="alert">
-          {{ message }}
-          <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        {% endif %}{% endfor %}{% endif %}{% endwith %}
-        <div class="container">{% block content %}{% endblock %}</div>
 </body>
 
 </html>
