--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -53,7 +53,7 @@
        <div class="mt-10 mr-10">
         <div class="main-gallery js-flickity" style="border-radius: 10px;" data-flickity='{ "wrapAround": true, 
         "prevNextButtons": false, "pageDots": false, "autoPlay": 5000, "cellSelector": ".gallery-cell"}'>
-        <div class="static-banner">Static banner 1</div>
+        <div class="static-banner">eat my ass 1</div>
           <div class="gallery-cell" style="background-image: url(static/assets/img/1.jpg)"></div>
           <div class="gallery-cell" style="background-image: url(static/assets/img/2.jpg)"></div>
           <div class="gallery-cell" style="background-image: url(static/assets/img/3.jpg)"></div>
@@ -67,22 +67,9 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
     <!-- About -->
-    <div id="particles-js" class="border-0 rounded-xl pb-20"></div>
-    <script>
-      /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
-        particlesJS.load('particles-js', 'static/particles.json', function() {
-          console.log('particles.js loaded');
-        });
     </script>
 
-    <script type="text/javascript" src="static/particles.json"></script>
-    <script type="text/javascript" src="static/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js">
-    </script>
-    
   </center>
-  <canvas class="background">asdasd</canvas>
-  <script src="static/to/particles.min.js"></script>
 </body>
 </html>
 {% endblock %}
